workspace = { members = ["intelligent_sight_lib", "threads", "utility"] }
[package]
name = "intelligent_sight_rs"
version = "0.1.0"
edition = "2021"
authors = ["Aya <shioriaya@foxmail.com>"]
# build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ctrlc = "3.4.4"
threads = { path = "threads" }
env_logger = "0.11.3"
log = "0.4.21"

[build-dependencies]

[dev-dependencies]

[features]
visualize = ["threads/visualize"]
from_video = ["threads/from_video"]
