[package]
name = "threads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intelligent_sight_lib = { path = "../intelligent_sight_lib" }
anyhow = "1.0.79"
log = "0.4.21"
opencv = { version = "0.91.3", optional = true }

[features]
visualize = ["opencv"]
